feat(security): introduce ChannelBindingPolicy for configurable negotiation
Expose a fluent `ChannelBindingPolicy` enum (DISABLE, ALLOW, REQUIRE)
to the ScramClient builder, replacing the hardcoded, passive channel
binding logic.

This decoupling allows downstream clients (such as JDBC drivers) to
strictly enforce channel binding requirements or safely disable them for
debugging, matching enterprise deployment requirements like PostgreSQL's
`channel_binding` configurations.

- Add `ChannelBindingPolicy` enum to the `scram-client` module.
- Refactor `Builder.mechanismNegotiation()` to process policy
directives.
- Implement strict validation throws for `REQUIRE` when components are
absent.
- Introduce `ChannelBindingException` when throws for `REQUIRE`.
- Maintain fallback downgrade protection ('y' flag) within the `ALLOW`
state.
- Implement comprehensive parameterized validation test suite.

Signed-off-by: Jorge Solorzano <jorsol@gmail.com>